fix hasadna/datacity-k8s#200 breadcrumb color on mobile

--- a/ckanext/datacity/fanstatic/datacity-theme.css
+++ b/ckanext/datacity/fanstatic/datacity-theme.css
@@ -295,10 +295,6 @@ div#content.container .row.wrapper {
     max-width: 200px;
 }
 
-.toolbar .breadcrumb a {
-    color: #505050;
-}
-
 .masthead .logo img {
     max-height: 80px;
 }
